# threedi-urban-eia-nl

./: .coveragerc  .coveralls.yml  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGES.rst  LICENSE  MANIFEST.in  Pipfile  README.rst  api.env  pyproject.toml  setup.cfg  setup.py
.github/workflows/: lint.yaml  release.yml  tests.yaml
batch_calculation_statistics/: batch_calculation_statistics.py  test_batch_calculation_statistics.py
batch_calculation_statistics/aggregation_netcdfs/: aggregate_results_3di_d9_2.nc
batch_calculation_statistics/gridadmin/: gridadmin.h5
batch_calculator/: .env  AddDWF.py  Batch.py  DownloadResults.py  Reeks.py  StartSimulation.py  __init__.py  batch_calculation_statistics.py  process_results.py  rain_series_calculation.py  rain_series_simulations.py  read_rainfall_events.py  rks_parser.py  scripts.py  test_start_simulation.py
batch_calculator/tests/: test_batch_calculation_statistics.py  test_read_rainfall_events.py  test_scripts.py
batch_calculator/tests/aggregation_netcdfs/: aggregate_results_3di_d11_2.nc  aggregate_results_3di_d12.nc  aggregate_results_3di_d13.nc  aggregate_results_3di_d7.nc  aggregate_results_3di_d8.nc
batch_calculator/tests/reeks_10jr_1955_test/: reeks_10jr_1955002 19550517124500
threedi_urban_eia_nl/: process_results.py  rain_series_simulations.py
